Agregado operacion.php y modificado index.html

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
   </head>
   <body>
-    <h1>HOLA ES MI PAGINA</h1>
-    <form action="" method="post">
-      Dato 1
-      <input type="number" name="" id="" />
-      <input type="number" name="" id="" />
-      <input type="submit" value="suma" />
+    <form action="operacion.php" method="post">
+      DATO 1
+      <input type="number" name="num_1" id="" />
+
+      <input type="submit" value="COMPARAR" />
     </form>
   </body>
 </html>
